gccida/g1/recog_for_combine
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10228:1: error: use of undeclared identifier 'reg_dead_regno'
reg_dead_regno = v27; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10231:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v27 + 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10232:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10239:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v24 = ( ( unsigned int)( mode_class_0[*( unsigned __int8 *)( v30 + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10259:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v25; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10260:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10282:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10284:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag == 1 ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10288:47: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
if ( find_regno_note( nonnote_insn, REG_DEAD, reg_dead_regno) ) 
                                              ^~~~~~~~~~~~~~
                                              reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10314:7: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
v28 = reg_dead_regno; 
      ^~~~~~~~~~~~~~
      reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10315:6: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
if ( reg_dead_regno < reg_dead_endregno ) 
     ^~~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10315:23: error: use of undeclared identifier 'reg_dead_endregno'
if ( reg_dead_regno < reg_dead_endregno ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10320:15: error: use of undeclared identifier 'reg_dead_endregno'
if ( ++v28 >= reg_dead_endregno ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10376:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10377:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10378:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10378:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10385:15: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees->next = undobuf_0.undos; 
              ^~~~~~~~~
              undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:10386:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = frees; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_for_combine/src/obj/combine.o] Error 1
